--- a/dist.ini
+++ b/dist.ini
@@ -3,12 +3,15 @@ author = Timm Murray <tmurray@wumpus-cave.net>
 license = BSD
 copyright_holder = Timm Murray
 
-version = 0.002
+version = 0.003
 [PkgVersion]
 
 [GatherDir]
 [Manifest]
 [MakeMaker]
+
+[CheckLib]
+lib = gstreamer-1.0
 
 [Prereqs]
 Glib::Object::Introspection = 0.009
@@ -19,7 +22,10 @@ Test::Pod = 0
 [MetaResources]
 homepage        = http://www.wumpus-cave.net
 repository.web  = https://github.com/frezik/GStreamer1
+repository.url  = https://github.com/frezik/GStreamer1.git
 repository.type = git
+
+[MetaJSON]
 
 [TestRelease]
 [ConfirmRelease]
